@@ -16,22 +16,21 @@ public class Main {
 
     static volatile boolean running = true;
 
-    static void updateCarPositions(List<Car> cars,ArrayList<HallCall> calls,int NF,long start) {
+    static void updateCarPositions(List<Car> cars,int NF,long start) {
         long TIME_PER_FLOOR = 2000; // 2 sec travel per floor
         long STOP_DELAY = 4000;     // 4 sec wait at floor
         for (Car car : cars) {
 
             if (!car.stops.isEmpty()) {
-                int targetFloor = car.stops.getFirst();
+                int targetFloor = car.stops.get(0);
                 int currentFloor = Integer.parseInt(car.c_state.replaceAll("[^0-9]",""));
-                String car_dir = car.c_state.replaceAll("[^A-Z]","");
                 long t = System.currentTimeMillis();
 
                 if (currentFloor < targetFloor){
                     if((t - car.time)>=TIME_PER_FLOOR){
                         currentFloor++;
                         car.time = t;
-                        car.c_state = currentFloor+car_dir;
+                        car.c_state = currentFloor+"U";
 
                     }
                 }
@@ -39,49 +38,78 @@ public class Main {
                     if((t-car.time)>=TIME_PER_FLOOR) {
                         currentFloor--;
                         car.time = t;
-                        car.c_state = currentFloor + car_dir;
+                        car.c_state = currentFloor + "D";
 
                     }
                 }
                 else {
                     if((t-car.time)>=STOP_DELAY) {
                         car.stops.removeFirst();
-                        car.time = t;
-                        System.out.println("Elevator "+car.name+" reached "+targetFloor+"at "+(int)((start - t) / 1000)+" sec.(passenger waited "+(int)(start-t-car.time)/1000+" sec)");
-                        int randomTarget = (int)(Math.random() * NF); // say 15 floors
-                        car.stops.add(randomTarget);
-                        System.out.println("Passenger inside Elevator " + car.name + " pressed " + randomTarget);
+                        int wait = (int)((t-start) - car.req_times.get(0))/1000;
+                        System.out.println("Elevator "+car.name+" reached "+targetFloor+" at "+(int)((t-start)/1000)+" sec."+"[reached floor "+ targetFloor +" in "+wait+" sec]");
+                        car.req_times.removeFirst();
+                        car.time =t;
+
+                        if(car.pick_call){
+                            int randomTarget;
+                            boolean isUp = car.call_dir.equals("U");
+                            if(isUp){
+                                if(targetFloor < NF-1){
+                                    randomTarget = targetFloor + 1 + (int)(Math.random() * (NF - targetFloor - 1));
+                                } else {
+                                    randomTarget = NF-1;
+                                }
+                            } else {
+                                if (targetFloor > 0) {
+                                    randomTarget = (int) (Math.random() * targetFloor);
+                                } else {
+                                    randomTarget = 0;
+                                }
+                            }
+                            car.stops.add(randomTarget);
+                            car.req_times.add(System.currentTimeMillis() - start);
+                            System.out.println("Passenger inside Elevator " + car.name + " pressed " + randomTarget);
+                            car.pick_call = false;
+                        }
                     }
                 }
             }
             else{
-                car.c_state = car.c_state+"\bI";
+                car.c_state = car.c_state.replaceAll("[A-Z]","I");
             }
         }
     }
 
-
-
     static void applyAssignments(ChromosomE chrom, List<Car> cars, ArrayList<HallCall> calls) {
         int i = 0;
+        ArrayList<HallCall> callsToRemove = new ArrayList<>();
         for (HallCall call : calls) {
             if(i<chrom.genes.size()) {
                 String carIdStr = chrom.genes.get(i);
                 int carId = Integer.parseInt(carIdStr.replaceAll("[^0-9]", "")) - 1; // convert to index
-                call.CarId = carIdStr;
-                int floor = Integer.parseInt(call.HC.replaceAll("[^0-9]", ""));
-                cars.get(carId).stops.add(floor);
-                System.out.println(carIdStr + " assigned to floor " + floor);
+                if(carId>=0 && carId < cars.size()){
+                    call.CarId = carIdStr;
+                    int floor = Integer.parseInt(call.HC.replaceAll("[^0-9]", ""));
+                    cars.get(carId).stops.add(floor);
+                    cars.get(carId).req_times.add(call.requestTime);
+                    cars.get(carId).pick_call = true;
+                    cars.get(carId).call_dir = call.HC.endsWith("U") ? "U" : "D";
+                    System.out.println(carIdStr + " assigned to floor " + floor);
+                    callsToRemove.add(call);
+                }
                 i++;
             }
         }
-
-
+        calls.removeAll(callsToRemove);
     }
 
     public static void main(String[] args){
         Scanner sc = new Scanner(System.in);
-        int NF = sc.nextInt(),M=sc.nextInt();
+        System.out.print("Enter the no.of Floors : ");
+        int NF = sc.nextInt();
+        System.out.print("Enter the no.of Elevators : ");
+        int M=sc.nextInt();
+        System.out.println("Input Hall calls here in the format (6U / 6D).");
         GA g = new GA(NF,M);
         g.cars = initcars(M,NF);
         long s_time = System.currentTimeMillis();
@@ -91,11 +119,18 @@ public class Main {
                    String input = sc.nextLine().trim();
                    if(!input.isEmpty()) {
                        try {
-                           long time = (System.currentTimeMillis() - s_time) / 1000;
-                           HallCall hc = new HallCall(input, time);
-                           g.calls.add(hc);
-                           //hc.requestTime = time;
-                           System.out.println("Hall call received at floor " + input + "\b (time -> " + time + " s)");
+                           if(input.equalsIgnoreCase("status")){
+                               for(Car car: g.cars){
+                                   System.out.println("Current state of "+car.name+" is "+car.c_state);
+                               }
+                           }
+                           else if(input.equalsIgnoreCase("exit"))running = false;
+                           else {
+                               long time = (System.currentTimeMillis() - s_time);//check
+                               HallCall hc = new HallCall(input, time);
+                               g.calls.add(hc);
+                               System.out.println("Hall call received at floor " + input + " (time -> " + (int) time / 1000 + " s)");
+                           }
                        }
                        catch(Exception e){
                            e.printStackTrace();
@@ -108,17 +143,21 @@ public class Main {
         inputThread.setDaemon(true);
         inputThread.start();
         while(running){
-            if(g.calls != null) {
+            boolean hasActiveCalls = g.calls !=null && !g.calls.isEmpty();
+            if(hasActiveCalls) {
                 ChromosomE best = g.Genetic_Algo();
-                applyAssignments(best, g.cars, g.calls);
-                updateCarPositions(g.cars, g.calls, NF, s_time);
+                if(!best.genes.isEmpty()){
+                    applyAssignments(best,g.cars,g.calls);
+                }
+            }
+            updateCarPositions(g.cars,NF,s_time);
+            try{
+                Thread.sleep(100);
+            }
+            catch(InterruptedException e){
+                Thread.currentThread().interrupt();
+                break;
             }
         }
     }
-
-
-
-
-
-
 }
